* Developer: new plugin type '3' for admin-only plugins (0=public, 1=admin+public, 2=library)
* Developer: fInput now uses htmlspecialchars on the value parameter (previously only escape_title)
* Developer: pagelinkurl() calls a custom URL handler if present. NB: The custom URL handlers function signature is modified, as an additional flag discerns pagelinks from permlinks.
* jQuery 1.2.6
* Ability to connect to the MySQL server through SSL

Changes in 4.0.6

* Security: add missing escape in SQL query (admin side)
* Security: safer use of txp_login cookie + nonce (note: users are logged out after upgrading!)
* Security: fixed XSS vulnerability (thanks DSecRG) and input validation in setup script.
* Security: fixed local file include vulnerability (publisher only) in textpattern/index.php (thanks DSecRG and Victor)
* Security: fixed XSS vulnerability and parameter value overflow in comments preview (thanks DSecRG)
* Security: escape request method as shown on logs tab (thanks Victor)
* Changed tag: <txp:thumbnail /> allows non-JS links to the full-size image
* Changed tag: <txp:article_custom /> allows comma-separated lists for category, section and author attributes (thanks Manfre)
* Changed tag: <txp:linklist /> allows comma-separated list for category attribute
* Changed tag: <txp:file_download_list /> allows comma-separated list for category attribute
* Changed tag: <txp:recent_articles /> allows comma-separated lists for category and section attribute
* Changed tag: <txp:related_articles /> allows comma-separated list for section attribute
* Changed tag: <txp:search_result_excerpt /> allows a custom "break" attribute defaulting to an ellipsis
* Deprecated tag: <txp:sitename /> replaced by <txp:site_name />
* Deprecated tag: <txp:request_uri /> replaced by <txp:page_url />
* Deprecated tag: <txp:s /> replaced by <txp:page_url type="s" />
* Deprecated tag: <txp:c /> replaced by <txp:page_url type="c" />